--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </form>
     </div>
     <div id="loader">
-        <img src="./images/pokeball-pokemon-svgrepo-com.svg" width="30" class="loader">
+        <img src="pokeball-pokemon-svgrepo-com (1).svg" width="30" class="loader">
         <span class="loader-txt">Loading..</span>
     </div>
     <div class="container" id="scroll">
